# IS-2021-prog-2-sem

./: README.md
Lab1/: CMakeLists.txt  figures.cpp  figures.h  main.cpp  polynomial.cpp  polynomial.h
Lab2/: currency.cpp  currency.h  main.cpp  request.cpp  request.h
Lab3/: cbuffer.h  main.cpp  myAlgorithms.h  woman.h
Lab4/: cube.h  main.cpp
Lab5/: allocator.h  main.cpp
Lab6/: CMakeLists.txt  main.cpp  poly.h
